--- a/Sprawozdanie/main.tex
+++ b/Sprawozdanie/main.tex
@@ -241,14 +241,21 @@ def strassen(a,b):
 \subsection{Opis teoretyczny}
 
 Autorzy artykułu "Discovering novel algorithms with AlphaTensor" w Nature postanowili spojrzeć na problem mnożenia macierzy w inny sposób przekształcając go w grę z bardzo dużą liczbą możliwych ruchów, której ukończenie jest równoważne znalezieniu szukanej macierzy. A następnie za pomocą uczenia maszynowego nauczyli model AlphaTensor, jak w nią graćm a ten metodą prób i błędóœ zaczął odkrywać najpierw już znane algorytmy, takie jak metoda Binét’a oraz metoda Strassena, aż dokonał przełomu odkrywając sposób wymnożenia macierzy 4x5 przez macierz 5x5 szybciej niż to było dotychczas możliwe. Najprostszy znany algorytm wykonuje obliczenia przy użyciu 100 mnożeń, algorytm Strassena przy 80, a algorytm AI przy 76.
+\bigbreak
 
 \begin{figure}[H]
   \centering
-    \includegraphics[width=0.8\textwidth]{AI.png}
+    \includegraphics[width=0.7\textwidth]{images/standard_algorithms.png}
+  \caption{Algoryty znane dotychczas}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+    \includegraphics[width=0.99\textwidth]{AI.png}
   \caption{Algorytm wymyślony przez AI}
 \end{figure}
 
-\subsection{Implementacjia}
+\subsection{Implementacja}
 
 Algorytm wymyśloney przez sztuczną inteligencję również został zaimplementowany w Pythonie:
 
@@ -404,13 +411,134 @@ def ai_matrix_mult(a,b):
     return c
 \end{minted}
 
-\section{Porównanie wydajności algorytmów}
+\section{Test działania algorytmu AI}
+
+W celu przetestowania poprawności algorytmu "wymyślonego" przez sztuczną inteligencję, wygenerowaliśmy dwie macierze z losowymi wartościami, a następni wymnożyliśmy je metodą AI oraz funkacją np.dot(). Po porównaniu otrzymanych wyników okazało się, że metoda jest poprawna, a różnica pomiędzy poszczególnymi elementami macierzy wynikowej jest minimalna i wynika stricte ze sposobu przechowywanie i operacji na liczbach zmiennoprzecinkowych w komputerze. Poniżej zamieściliśmy wykorzystane macierze oraz otrzymane różnice.
+
+\[
+A = \begin{bmatrix}
+0.12 & 0.34 & 0.56 & 0.78 & 4.55 \\
+1.23 & 1.45 & 1.67 & 1.89 & 4.66 \\
+2.01 & 2.23 & 2.45 & 2.67 & 4.77 \\
+3.11 & 3.22 & 3.33 & 3.44 & 4.88
+\end{bmatrix}
+\]
+
+% Macierz B
+\[
+B = \begin{bmatrix}
+0.10 & 0.20 & 0.30 & 0.40 & 0.50 \\
+1.00 & 1.10 & 1.20 & 1.30 & 1.40 \\
+2.00 & 2.10 & 2.20 & 2.30 & 2.40 \\
+3.00 & 3.10 & 3.20 & 3.30 & 3.40 \\
+4.00 & 4.10 & 4.20 & 4.30 & 4.40
+\end{bmatrix}
+\]
+
+\[
+C1 = C2 = A \cdot B
+\]
+Gdzie C1 to wynik otrzymany metodami AI, a C2 przy wykorzystaniu numpy
+\[
+C1 - C2 =
+\begin{bmatrix}
+3.55 \times 10^{-15} & 0.00 & 3.55 \times 10^{-15} & 7.11 \times 10^{-15} & 3.55 \times 10^{-15} \\
+3.55 \times 10^{-15} & 3.55 \times 10^{-15} & 1.07 \times 10^{-14} & 7.11 \times 10^{-15} & 7.11 \times 10^{-15} \\
+0.00 & 0.00 & 1.42 \times 10^{-14} & 0.00 & 0.00 \\
+0.00 & 2.13 \times 10^{-14} & 0.00 & 0.00 & 1.42 \times 10^{-14}
+\end{bmatrix}
+\]
+
+
+\section{Porównanie wydajności algorytmów Binet'a i Strassena}
 
 \subsection{Zlliczanie liczby operacji zmiennoprzecinkowych}
 
+Zliczanie operacji zmiennoprzecinkowych osiągnęliśmy poprzez stworzenie typu danych dziedziczącego po float'cie i przeładowującego operacje arytmetyczne tak aby ich wywołania były zliczane. Z uwagi na wybrany sposób implementacji warunków zadania (tj. wypełnianie macierzy zerami, tak aby liczba wirszy i kolumn była równa najbliższej większej potędze dwójki), po zmierzeniu liczby FLOPS'ów otrzymaliśmy 9 róznych zestawów wartości dla algorytmu Binet'a, co zostało zaprezentowane w tabeli 1.
 
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|l|l|l|l|l|}
+    \hline
+        Rozmiar macierzy & Mnożenia & Dodawania & Odejmowania & Dzielenia  \\ \hline
+        2 & 8 & 4 & 0 & 0  \\ \hline
+        4 & 64 & 48 & 0 & 0  \\ \hline
+        8 & 512 & 448 & 0 & 0  \\ \hline
+        16 & 4096 & 3840 & 0 & 0  \\ \hline
+        32 & 32768 & 31744 & 0 & 0  \\ \hline
+        64 & 262144 & 258048 & 0 & 0  \\ \hline
+        128 & 2097152 & 2080768 & 0 & 0  \\ \hline
+        256 & 16777216 & 16711680 & 0 & 0  \\ \hline
+        512 & 134217728 & 133955584 & 0 & 0 \\ \hline
+    \end{tabular}
+    \caption{Liczba poszczególnych operacji zmiennoprzecinkowych dla algorytmu Binet'a}
+\end{table}
+
+\noindent
+Na poniższym wykresie zaprezentowaliśmy sumaryczną liczbę operacji zmiennoprzecinkowych dla rozmiarów macierzy z zakresu od 1 do 512.
+
+\begin{figure}[H]
+  \centering
+    \includegraphics[width=0.8\textwidth]{binet_flops.png}
+  \caption{Sumaryczna liczba FLOPS'ów dla algorytmu Binet'a}
+\end{figure}
+
+Taką samą analizę przeprowadziliśmy dla algorytmu Strassen'a również otrzymując 9 unikalnych zestawów wartości, co widać w tabeli poniżej.
+
+\begin{table}[H]
+    \centering
+    \begin{tabular}{|l|l|l|l|l|}
+    \hline
+        Rozmiar macierzy & Mnożenia & Dodawania & Odejmowania & Dzielenia  \\ \hline
+        2 & 7 & 12 & 6 & 0  \\ \hline
+        4 & 49 & 132 & 66 & 0  \\ \hline
+        8 & 343 & 1116 & 558 & 0  \\ \hline
+        16 & 2401 & 8580 & 4290 & 0  \\ \hline
+        32 & 16807 & 63132 & 31566 & 0  \\ \hline
+        64 & 117649 & 454212 & 227106 & 0  \\ \hline
+        128 & 823543 & 3228636 & 1614318 & 0  \\ \hline
+        256 & 5764801 & 22797060 & 11398530 & 0  \\ \hline
+        512 & 40353607 & 160365852 & 80182926 & 0 \\ \hline
+    \end{tabular}
+    \caption{Liczba poszczególnych operacji zmiennoprzecinkowych dla algorytmu Strassen'a}
+\end{table}
+
+\noindent
+Ponownie sporządziliśmy wykres prezentujący sumaryczną liczbę FLOPS'ów dla macierzy o rozmiarach z zakresu od 1 do 512.
+
+\begin{figure}[H]
+  \centering
+    \includegraphics[width=0.8\textwidth]{images/strassen_flops.png}
+  \caption{Sumaryczna liczba FLOPS'ów dla algorytmu Strassen'a}
+\end{figure}
 
 \subsection{Porównanie czasów działania}
+
+Jak widać czasy wykonania znów tworzą schodkowy wykres, co wynika z faktu uzupełniania macierzy zerami. Osiągane wartości są dość duże, dla rozmiarów 257 - 250 było to już ok. 50s. Na wykresie można zobaczyć pik czasu wykonania dla rozmiarów macierzy pomiędzy 150 do 200, najprawdopodobniej wynika on poprostu z większego obciążenia procesora w tym czasie (Całość liczyła się ok. 100 minut). 
+
+\begin{figure}[H]
+  \centering
+    \includegraphics[width=0.8\textwidth]{images/binet_runtime.png}
+  \caption{Wykres czasu działania algorytmu Binet'a dla różnych rozmiarów macierzy}
+\end{figure}
+
+\noindent
+Podobnie sytuacja wygląda dla algorytmu Strassena, co widać na wykresie poniżej.
+
+\begin{figure}[H]
+  \centering
+    \includegraphics[width=0.8\textwidth]{images/strassen_runtime.png}
+  \caption{Wykres czasu działania algorytmu Strassen'a dla różnych rozmiarów macierzy}
+\end{figure}
+
+\noindent
+Sporządziliśmy jeszcze jeden wykres prezentujący oba czasy działania na jednym wykresie, co pięknie obrazuje niższą złożoność algorytmu Strassena.
+
+\begin{figure}[H]
+  \centering
+    \includegraphics[width=0.8\textwidth]{images/binet_strassen_runtime.png}
+  \caption{Porównanie czasów działania algorytmu Binet'a i Strassena}
+\end{figure}
 
 \section{Oszacowanie złożoności obliczeniowej}
 
@@ -418,10 +546,32 @@ Złożoność obliczeniową postanowiliśmy oszacować teoretycznie. Dla algoryt
 
 \section{Porównanie wyników z Octave}
 
-\subsection{Octave}
+W celu sprawdzenia poprawności zaimplementowanych algorytmów porównaliśmy wyniki mnożenia 2 macierzy w Octave oraz za pomocą naszych implementacji algorytmu Binet'a i Strassena. Poniżej zamieszczony jest kod w Octave, który użyliśmy do pomnożenia macierzy.
 
-\subsection{Wyniki}
+\begin{minted}[bgcolor=white]{python}
+A = [1.1, 2.2, 3.3, 7.1;
+     4.4, 5.5, 6.6, 3.2;
+     7.7, 8.8, 9.9, 5.1];
+
+B = [9.9, 8.8, 7.7, 7.6;
+     6.6, 5.5, 4.4, 6.2;
+     3.3, 2.2, 1.1, 1.2];
+
+C = A * B;
+
+disp(C);
+\end{minted}
+
+\noindent
+Wyniki otrzymane tymi trzeba sposobami były identyczne. Zaobserwowaliśmy, że implementacja mnożenia w Octave jest dużo lepsza i kod wykonuje się znacznie szybciej, niż w przypadku naszych algorytmów. Szczególnie przeprowadziliśmy testy dla macierzy 350x350. Kod w Octave wykonuje się w ułamku sekundy, gdzie nasza implementacja algorytmu Binet'a i Strassena potrzebuje paręset sekund.
 
 \section{Wnioski}
+
+\begin{enumerate}
+    \item Algorytm Strassena jest szybszy od algorytmu Binet'a, co zostało przez nas pokazane teoretycznie jak i zaobserwowane podczas testów.
+    \item Metoda mnożenia zaproponowana przez AI jest poprawna, jednak jej implementacja jest dość długa.
+    \item Jednym z powodów dość powolnego mnożenia macierzy jest implementacja algorytmów w języku Python, prawdopodobnie dużo lepsze czasy uzyskalibyśmy implementując je w C.
+    \item Octave nadaje się do mnożenia bardzo dużych macierzy.
+\end{enumerate}
 
 \end{document}
