--- a/Lab1/Sprawozdanie/main.tex
+++ b/Lab1/Sprawozdanie/main.tex
@@ -542,7 +542,7 @@ Sporządziliśmy jeszcze jeden wykres prezentujący oba czasy działania na jedn
 
 \section{Oszacowanie złożoności obliczeniowej}
 
-Złożoność obliczeniową postanowiliśmy oszacować teoretycznie. Dla algorytmu Binét'a algorytm wykonuje 8 mnożeń na każdym etapie, a liczba podziałów wynosi \(log{2}[n]\), zatem liczba operacji wynosi \(8^{log{2}{n}} = n^3\). Jeśli chodzi o algorytm Strassena wykonuje on 7 mnożeń na każdym etapie, zatem złożoność wynosi \(7^{log{2}{n}} = 2^{2.81}\).
+Złożoność obliczeniową postanowiliśmy oszacować teoretycznie. Dla algorytmu Binét'a algorytm wykonuje 8 mnożeń na każdym etapie, a liczba podziałów wynosi \(log{2}[n]\), zatem liczba operacji wynosi \(8^{log{2}{n}} = n^3\). Jeśli chodzi o algorytm Strassena wykonuje on 7 mnożeń na każdym etapie, zatem złożoność wynosi \(7^{log{2}{n}} = n^{2.81}\).
 
 \section{Porównanie wyników z Octave}
 
