--- a/Lab1/Sprawozdanie/main.tex
+++ b/Lab1/Sprawozdanie/main.tex
@@ -93,7 +93,7 @@ Funkcja Binet(A, B)
     c21 = Binet(a21, b11) + Binet(a22, b21)
     c22 = Binet(a21, b12) + Binet(a22, b22)
 
-    Zwróć macierz C złożóną z c11, c12, c21, c22
+    Zwróć macierz C złożoną z c11, c12, c21, c22
 \end{minted}
 
 \subsection{Implementacja}
@@ -196,7 +196,7 @@ Funkcja Binet(A, B)
     c21=p2+p4
     c22=p1-p2+p3+p6
 
-    Zwróć macierz C złożóną z c11, c12, c21, c22
+    Zwróć macierz C złożoną z c11, c12, c21, c22
 \end{minted}
 
 \subsection{Implementacja}
