Finished calculations for lab2

--- a/lab2/lab2_benchmark.ipynb
+++ b/lab2/lab2_benchmark.ipynb
@@ -129,29 +129,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m251\u001b[39m):\n\u001b[0;32m      3\u001b[0m     A \u001b[38;5;241m=\u001b[39m get_random_matrix_any_size(i)\n\u001b[1;32m----> 5\u001b[0m     \u001b[43mmeasure_FLOPS_and_runtime\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mData/recursive_inverse.txt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mi\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrecursive_inverse\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mA\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\benchmark_utility.py:35\u001b[0m, in \u001b[0;36mmeasure_FLOPS_and_runtime\u001b[1;34m(filename, measurement_id, function, *args)\u001b[0m\n\u001b[0;32m     31\u001b[0m FloatCounter\u001b[38;5;241m.\u001b[39mreset_counters()\n\u001b[0;32m     33\u001b[0m start \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[1;32m---> 35\u001b[0m \u001b[43mfunction\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     37\u001b[0m end \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m     39\u001b[0m results \u001b[38;5;241m=\u001b[39m FloatCounter\u001b[38;5;241m.\u001b[39mget_data()\n",
-      "File \u001b[1;32mc:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\lab2\\lab2.py:54\u001b[0m, in \u001b[0;36mrecursive_inverse\u001b[1;34m(a)\u001b[0m\n\u001b[0;32m     49\u001b[0m s22inv \u001b[38;5;241m=\u001b[39m recursive_inverse(s22)\n\u001b[0;32m     51\u001b[0m b11 \u001b[38;5;241m=\u001b[39m a11inv \u001b[38;5;241m+\u001b[39m strassen(\n\u001b[0;32m     52\u001b[0m     strassen(strassen(strassen(a11inv, a12), s22inv), a21), a11inv\n\u001b[0;32m     53\u001b[0m )\n\u001b[1;32m---> 54\u001b[0m b12 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39mstrassen(\u001b[43mstrassen\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma11inv\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43ma12\u001b[49m\u001b[43m)\u001b[49m, s22inv)\n\u001b[0;32m     55\u001b[0m b21 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39mstrassen(strassen(s22inv, a21), a11inv)\n\u001b[0;32m     56\u001b[0m b22 \u001b[38;5;241m=\u001b[39m s22inv\n",
-      "File \u001b[1;32mc:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:69\u001b[0m, in \u001b[0;36mstrassen\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m     67\u001b[0m p5 \u001b[38;5;241m=\u001b[39m strassen(a11\u001b[38;5;241m+\u001b[39ma12, b22)\n\u001b[0;32m     68\u001b[0m p6 \u001b[38;5;241m=\u001b[39m strassen(a21\u001b[38;5;241m-\u001b[39ma11, b11\u001b[38;5;241m+\u001b[39mb12)\n\u001b[1;32m---> 69\u001b[0m p7 \u001b[38;5;241m=\u001b[39m \u001b[43mstrassen\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma12\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43ma22\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb21\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mb22\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     71\u001b[0m c11\u001b[38;5;241m=\u001b[39mp1\u001b[38;5;241m+\u001b[39mp4\u001b[38;5;241m-\u001b[39mp5\u001b[38;5;241m+\u001b[39mp7\n\u001b[0;32m     72\u001b[0m c12\u001b[38;5;241m=\u001b[39mp3\u001b[38;5;241m+\u001b[39mp5\n",
-      "File \u001b[1;32mc:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:68\u001b[0m, in \u001b[0;36mstrassen\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m     66\u001b[0m p4 \u001b[38;5;241m=\u001b[39m strassen(a22, b21\u001b[38;5;241m-\u001b[39mb11)\n\u001b[0;32m     67\u001b[0m p5 \u001b[38;5;241m=\u001b[39m strassen(a11\u001b[38;5;241m+\u001b[39ma12, b22)\n\u001b[1;32m---> 68\u001b[0m p6 \u001b[38;5;241m=\u001b[39m \u001b[43mstrassen\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma21\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43ma11\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb11\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mb12\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     69\u001b[0m p7 \u001b[38;5;241m=\u001b[39m strassen(a12\u001b[38;5;241m-\u001b[39ma22, b21\u001b[38;5;241m+\u001b[39mb22)\n\u001b[0;32m     71\u001b[0m c11\u001b[38;5;241m=\u001b[39mp1\u001b[38;5;241m+\u001b[39mp4\u001b[38;5;241m-\u001b[39mp5\u001b[38;5;241m+\u001b[39mp7\n",
-      "File \u001b[1;32mc:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:73\u001b[0m, in \u001b[0;36mstrassen\u001b[1;34m(a, b)\u001b[0m\n\u001b[0;32m     71\u001b[0m c11\u001b[38;5;241m=\u001b[39mp1\u001b[38;5;241m+\u001b[39mp4\u001b[38;5;241m-\u001b[39mp5\u001b[38;5;241m+\u001b[39mp7\n\u001b[0;32m     72\u001b[0m c12\u001b[38;5;241m=\u001b[39mp3\u001b[38;5;241m+\u001b[39mp5\n\u001b[1;32m---> 73\u001b[0m c21\u001b[38;5;241m=\u001b[39m\u001b[43mp2\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mp4\u001b[49m\n\u001b[0;32m     74\u001b[0m c22\u001b[38;5;241m=\u001b[39mp1\u001b[38;5;241m-\u001b[39mp2\u001b[38;5;241m+\u001b[39mp3\u001b[38;5;241m+\u001b[39mp6\n\u001b[0;32m     76\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m unpad_matrix(np\u001b[38;5;241m.\u001b[39mvstack((np\u001b[38;5;241m.\u001b[39mhstack((c11,c12)),np\u001b[38;5;241m.\u001b[39mhstack((c21,c22)))), original_shape)\n",
-      "File \u001b[1;32mc:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\floatcounter.py:21\u001b[0m, in \u001b[0;36mFloatCounter.__add__\u001b[1;34m(self, value)\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__add__\u001b[39m(\u001b[38;5;28mself\u001b[39m, value):\n\u001b[0;32m     20\u001b[0m     FloatCounter\u001b[38;5;241m.\u001b[39madd_counter \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m---> 21\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mFloatCounter\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__add__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:43: RuntimeWarning: overflow encountered in multiply\n",
+      "  return a*b\n",
+      "c:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:71: RuntimeWarning: invalid value encountered in add\n",
+      "  c11=p1+p4-p5+p7\n",
+      "c:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:73: RuntimeWarning: invalid value encountered in add\n",
+      "  c21=p2+p4\n",
+      "c:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:74: RuntimeWarning: invalid value encountered in subtract\n",
+      "  c22=p1-p2+p3+p6\n",
+      "c:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:72: RuntimeWarning: invalid value encountered in add\n",
+      "  c12=p3+p5\n",
+      "c:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:74: RuntimeWarning: invalid value encountered in add\n",
+      "  c22=p1-p2+p3+p6\n",
+      "c:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:71: RuntimeWarning: invalid value encountered in subtract\n",
+      "  c11=p1+p4-p5+p7\n",
+      "c:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:74: RuntimeWarning: overflow encountered in subtract\n",
+      "  c22=p1-p2+p3+p6\n",
+      "c:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:73: RuntimeWarning: overflow encountered in add\n",
+      "  c21=p2+p4\n",
+      "c:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:74: RuntimeWarning: overflow encountered in add\n",
+      "  c22=p1-p2+p3+p6\n",
+      "c:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:71: RuntimeWarning: overflow encountered in subtract\n",
+      "  c11=p1+p4-p5+p7\n",
+      "c:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:72: RuntimeWarning: overflow encountered in add\n",
+      "  c12=p3+p5\n",
+      "c:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:71: RuntimeWarning: overflow encountered in add\n",
+      "  c11=p1+p4-p5+p7\n",
+      "c:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:67: RuntimeWarning: invalid value encountered in add\n",
+      "  p5 = strassen(a11+a12, b22)\n",
+      "c:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:68: RuntimeWarning: invalid value encountered in subtract\n",
+      "  p6 = strassen(a21-a11, b11+b12)\n",
+      "c:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:68: RuntimeWarning: invalid value encountered in add\n",
+      "  p6 = strassen(a21-a11, b11+b12)\n",
+      "c:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:66: RuntimeWarning: invalid value encountered in subtract\n",
+      "  p4 = strassen(a22, b21-b11)\n",
+      "c:\\Users\\48667\\Documents\\AGH UST\\Semestr5\\Algorytmy-Macierzowe\\Lab1\\matrix_mult.py:43: RuntimeWarning: invalid value encountered in multiply\n",
+      "  return a*b\n"
      ]
     }
    ],
    "source": [
-    "for i in range(1, 251):\n",
+    "for i in range(61, 251):\n",
     "    \n",
     "    A = get_random_matrix_any_size(i)\n",
     "    \n",
@@ -160,20 +185,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "measure_FLOPS_and_runtime(function=recursive_LU, n_args=1, ns=range(1, 251), filename='Data/recursive_lu.txt') # 4h"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(1, 251):\n",
+    "for i in range(1, 251): # 4h\n",
     "    \n",
     "    A = get_random_matrix_any_size(i)\n",
     "    \n",
@@ -209,6 +225,20 @@
    ],
    "source": [
     "for i in range(1, 251):\n",
+    "\n",
+    "    A = get_random_matrix_any_size(i)\n",
+    "    V = get_random_vector_any_size(i)\n",
+    "\n",
+    "    measure_FLOPS_and_runtime('Data/recursive_gauss.txt', i, recursive_Gauss, A, V)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(187, 251):\n",
     "\n",
     "    A = get_random_matrix_any_size(i)\n",
     "    V = get_random_vector_any_size(i)\n",
