Updated lab1 report

--- a/Lab1/Sprawozdanie/main.tex
+++ b/Lab1/Sprawozdanie/main.tex
@@ -21,7 +21,7 @@
 
 \section{Wstęp}
 
-Tematem zadania było wygenerowanie losowych macierzy o wartościach z przedziału otwartego \((0.00000001, 1.0)\), a następnie zaimplementowanie algorytmów:
+Tematem zadania było wygenerowalnie losowych macierzy o wartościach z przedziału otwartego \((0.00000001, 1.0)\), a następnie zaimplementowanie algorytmów:
 
 \begin{enumerate}
     \item Rekurencyjnego mnożenia macierzy metodą Binét’a
