--- a/lab2/lab2_benchmark.ipynb
+++ b/lab2/lab2_benchmark.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,12 @@
       " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00 -1.33923099e+01\n",
       "   2.49595704e+01]\n",
       " [ 0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00\n",
-      "  -4.86834850e+00]]\n"
+      "  -4.86834850e+00]]\n",
+      "[[1.12 6.31 3.52 5.31 3.23]\n",
+      " [2.43 5.23 7.43 6.54 2.22]\n",
+      " [0.76 4.98 7.86 4.   7.43]\n",
+      " [9.99 4.33 5.44 3.45 2.45]\n",
+      " [6.43 5.44 3.23 1.23 2.67]]\n"
      ]
     }
    ],
@@ -661,7 +666,9 @@
     "print(\"L = \")\n",
     "print(L)\n",
     "print(\"U = \")\n",
-    "print(U)"
+    "print(U)\n",
+    "\n",
+    "print(L @ U)"
    ]
   },
   {
